# so_drive

./: .gitignore  CMakeLists.txt  README.md  build.bat  dialognewitem.cpp  dialognewitem.h  dialognewitem.ui  filewindow.cpp  filewindow.h  filewindow.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui  resources.qrc  setup.bat  so_drive.pro
server/: Makefile  build.bat  server.cpp
